# libusual

./: .appveyor.yml  .cirrus.yml  .gitattributes  .gitignore  .travis.yml  Makefile  README  Setup.mk  appveyor.yml  autogen.sh  build.mk.in  build_msvc.mk  config.mak.in  configure.ac  find_modules.sh
debian/: changelog  control  copyright  libusual-dev.install  libusual0.symbols  rules
doc/: Doxyfile  mainpage.dox
m4/: acx_pthread.m4  antimake.m4  usual.m4
mk/: Makefile.am  amext-cxx.mk  amext-libusual.mk  amext-modes.mk  amext-msvc.mk  antimake.mk  antimake.txt  std-autogen.sh
mk/temos/: Makefile  index.txt  libtemo.sh
test/: Makefile  awk_test.sh  compile.c  connect-tls.c  coverage.mk  coverage.sh  force_compat.sed  test_aatree.c  test_base.c  test_bits.c  test_caslock.c  test_cbtree.c  test_cfparser.c  test_cfparser.ini  test_common.c  test_common.h  test_crypto.c  test_ctype.c  test_cxalloc.c  test_endian.c  test_event.c  test_fileutil.c  test_fnmatch.c  test_getopt.c  test_hashing.c  test_hashtab.c  test_heap.c  test_json.c  test_list.c  test_mdict.c  test_netdb.c  test_pgutil.c  test_psrandom.c  test_pthread.c  test_regex.c  test_shlist.c  test_slab_ts.c  test_socket.c  test_spinlock.c  test_statlist_ts.c  (+11 more)
test/attregex/: Makefile  run.sh  testregex.c
test/ssl/: ca1_client1.crt  ca1_client1.crt.sha1  ca1_client1.crt.sha256  ca1_client1.key  ca1_complex1.crt  ca1_complex1.crt.sha1  ca1_complex1.crt.sha256  ca1_complex1.key  ca1_root.crt  ca1_root.crt.sha1  ca1_root.crt.sha256  make.sh  (+25 more)
usual/: aatree.c  aatree.h  alloc.h  base.c  base.h  base_win32.h  bits.h  bytemap.h  caslock.c  caslock.h  cbtree.c  cbtree.h  cfparser.c  cfparser.h  compat.c  compat.h  config_msvc.h  crc32.c  crc32.h  ctype.h  cxalloc.c  cxalloc.h  cxextra.c  cxextra.h  daemon.c  daemon.h  dlfcn.c  dlfcn.h  endian.h  err.c  err.h  event.c  event.h  fileutil.c  fileutil.h  fnmatch.c  fnmatch.h  getopt.c  hashtab-impl.h  heap-impl.h  (+69 more)
(+114 files in other folders)
