dnl Process this file with autoconf to produce a configure script.

AC_INIT(libusual, 0.1)
AC_CONFIG_SRCDIR(usual/base.h)
AC_CONFIG_HEADER(usual/config.h)
AC_PREREQ([2.59])

AC_USUAL_PORT_CHECK

AC_USUAL_PROGRAM_CHECK

AC_USUAL_HEADER_CHECK

AC_USUAL_TYPE_CHECK

AC_USUAL_FUNCTION_CHECK

AC_USUAL_CASSERT

AC_USUAL_WERROR

AC_USUAL_DEBUG

dnl Output findings
AC_OUTPUT([config.mak])

